--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <a href="Test.ics"><img src="https://media0.giphy.com/media/2Wim5ftHoDdJ1RNpuS/giphy.gif?cid=ecf05e47105e82ec5acead4bcfe69dc343d45419907ef03b&rid=giphy.gif"></a>
+    <a href="Test.ics.url"><img src="https://media0.giphy.com/media/2Wim5ftHoDdJ1RNpuS/giphy.gif?cid=ecf05e47105e82ec5acead4bcfe69dc343d45419907ef03b&rid=giphy.gif"></a>
    
 </body>
 </html>
